# smart-journal

./: .gitignore  README.md  TODO.md  design-doc.md  pyproject.toml  smart-journal.toml
.github/workflows/: ci.yml
scripts/: smoke_asr.py  smoke_ocr.py  smoke_openai.py
src/smart_journal/: __init__.py  __main__.py  cli.py  config.py  contracts.py  explore.py  factories.py  ingestion.py  registry.py  semantic.py  vector_ops.py
src/smart_journal/providers/: __init__.py  e5.py  local_cas.py  mock.py  ollama.py  openai_chat.py  sqlite_meta.py  usearch_file.py
src/smart_journal/web/: app.py
tests/: __init__.py  test_api_increment8.py  test_cli.py  test_config.py  test_factories.py  test_increment1.py  test_increment2.py  test_increment3.py  test_increment4.py  test_increment5.py  test_increment6.py  test_increment7.py  test_increment8.py  test_ollama_provider.py  test_openai_provider.py  test_registry.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.jsx  GraphCanvas.jsx  GraphMode.jsx  api.js  styles.css
